k8s/app.yml
apiVersion: v1
kind: Service
metadata:
  name: soarcast-backend
  namespace: soarcast
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: soarcast-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: soarcast-backend
  namespace: soarcast
  labels:
    app: soarcast-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: soarcast-backend
  template:
    metadata:
      labels:
        app: soarcast-backend
    spec:
      containers:
        - name: soarcast-backend
          #image: registry.gitlab.com/sethitow/soarcast-backend:latest
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          volumeMounts:
            - name: service-account-credentials-volume
              mountPath: /etc/gcp
              readOnly: true
      volumes:
        - name: service-account-credentials-volume
          secret:
            secretName: weather-firestore-google-application-credentials
            items:
            - key: sa_json
              path: sa_credentials.json
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: weather-particle-ingress
  namespace: weather
  labels:
    app: weather-particle-ingress
  annotations:
      kubernetes.io/ingress.class: nginx
      certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - soarcast.sethitow.com
      secretName: letsencrypt-prod
  rules:
    - host: soarcast.sethitow.com
      http:
        paths:
          - path: /api
            backend:
              serviceName: soarcast-backend
              servicePort: http
